--- a/src/app/search-page/search-page.component.html
+++ b/src/app/search-page/search-page.component.html
@@ -1,49 +1,67 @@
 <div class="container">
-    <div class="search-page" >
+    <div class="search-page">
         <p>Welcome {{username}}!</p>
+    <div>
+        <h1>Counter: {{ CounterValue }}</h1>
+    </div>
     </div>
     <div class="logout">
         <button mat-raised-button color="primary" (click)="logout()">logout</button>
 
     </div>
+    {{country}}
     <br>
-    <div class="spinner" *ngIf="showSpinner">
-        <img src="assets/spinner.gif">
-    </div>
     <div>
         <h3>University Search! World wide</h3>
     </div>
     <table>
         <tr>
-            <td>
-                <div class="country" *ngIf="countries && countries.length > 0">
-                    <label>Select Country</label>
-                    <select class="select-country" (change)="onchangecountry()" [(ngModel)]="country"> 
-                    <option disabled>Select Country</option>
-                    <option *ngFor="let c of countries" [value]="c['country']">  
-                        {{c['country']}}</option>     
-                    </select>
-                </div>
-             
-            </td>
-            <td>
-                <div class="country" *ngIf="states && states.length > 0">
-                    <label>Select State</label>
-                    <select class="select-country" (change)="onchangestate()" [(ngModel)]="state"> 
-                    <option  disabled>Select State</option>
-                    <option *ngFor="let state of states" [value]="state['state-province']">  
-                        {{state['state-province']}}</option>     
-                    </select>
-                </div>
-            </td>
             
+            <td>
+                <div class="country">
+                    <label>Select Country</label>
+                    <select class="select-country" (change)="onchangecountry()" [(ngModel)]="country" >
+                        <option >Select Country</option>
+                        <option value="india">India</option>
+                        <option value="united states">United States</option>
+                        <option value="China">China</option>
+                        <option value="others">Others</option>
+                       
+                    </select>
+                </div>
+                <div class="country" *ngIf="showOthers">
+                    <!-- <label>Select Country</label>
+                    <select class="select-country" (change)="onchangecountry()" [(ngModel)]="country">
+                        <option disabled>Select Country</option>
+                        <option *ngFor="let c of countries" [value]="c['country']">
+                            {{c['country']}}</option>
+                    </select> -->
+                    <mat-form-field class="example-full-width">
+                        <span matPrefix> </span>
+                        <input type="tel" matInput placeholder="Search" [(ngModel)]="country">
+                        <button matSuffix mat-button (click)="getAllStates()"><mat-icon  >search</mat-icon></button>
+                        </mat-form-field>
+                </div>
+
+            </td>
+            <td>
+                <div class="country">
+                    <label>Select State</label>
+                    <select class="select-country" (change)="onchangestate()" [(ngModel)]="state">
+                        <option disabled>Select State</option>
+                        <option *ngFor="let state of states" [value]="state['state-province']">
+                            {{state['state-province']}}</option>
+                    </select>
+                </div>
+            </td>
+
         </tr>
     </table>
-    
-    
-    
+
+
+
     <div class="universities">
-        <table  *ngIf="universities && universities.length > 0">
+        <table *ngIf="universities && universities.length > 0">
             <tr>
                 <th>Alpha Code</th>
                 <th>Country</th>
@@ -54,11 +72,56 @@
             <tr *ngFor="let u of universities">
                 <td>{{u.alpha_two_code}}</td>
                 <td>{{u.country}}</td>
-               <td>{{u.name}}</td>   
-               <td>{{u.domains}}</td>
-               <td>{{u.web_pages}}</td>
+                <td>{{u.name}}</td>
+                <td>{{u.domains}}</td>
+                <td>{{u.web_pages}}</td>
             </tr>
         </table>
     </div>
-    
+
+    <div class="mat-elevation-z8">
+
+        <table mat-table [dataSource]="dataSource" >
+
+            <!--- Note that these columns can be defined in any order.
+              The actual rendered columns are set as a property on the row definition" -->
+
+            <!-- Position Column -->
+            <ng-container matColumnDef="alpha_two_code">
+                <th mat-header-cell *matHeaderCellDef> Alpha Code </th>
+                <td mat-cell *matCellDef="let element"> {{element.alpha_two_code}} </td>
+            </ng-container>
+
+            <!-- Name Column -->
+            <ng-container matColumnDef="country">
+                <th mat-header-cell *matHeaderCellDef> Country </th>
+                <td mat-cell *matCellDef="let element"> {{element.country}} </td>
+            </ng-container>
+
+
+            <!-- Weight Column -->
+            <ng-container matColumnDef="name">
+                <th mat-header-cell *matHeaderCellDef> University Name </th>
+                <td mat-cell *matCellDef="let element"> {{element.name}} </td>
+            </ng-container>
+
+            <!-- Symbol Column -->
+            <ng-container matColumnDef="domains">
+                <th mat-header-cell *matHeaderCellDef> Domain </th>
+                <td mat-cell *matCellDef="let element"> {{element.domains}} </td>
+            </ng-container>
+
+            <ng-container matColumnDef="web_pages">
+                <th mat-header-cell *matHeaderCellDef> Web Pages </th>
+                <td mat-cell *matCellDef="let element"> {{element.web_pages}} </td>
+            </ng-container>
+
+            <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+            <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+        </table>
+        <mat-paginator [pageSizeOptions]="[5, 10, 20]" showFirstLastButtons
+            aria-label="Select page of periodic elements">
+        </mat-paginator>
+    </div>
+
 </div>
