changed counter name

--- a/src/app/search-page/search-page.component.html
+++ b/src/app/search-page/search-page.component.html
@@ -2,7 +2,7 @@
     <div class="search-page">
         <p>Welcome {{username}}!</p>
     <div>
-        <h1>Counter: {{ CounterValue }}</h1>
+        <h4>Number of Searches: {{ CounterValue }}</h4>
     </div>
     </div>
     <div class="logout">
