--- a/src/app/search-page/search-page.component.html
+++ b/src/app/search-page/search-page.component.html
@@ -109,7 +109,7 @@
             </ng-container>
             <ng-container matColumnDef="web_pages">
                 <th mat-header-cell *matHeaderCellDef> Web Pages </th>
-                <td mat-cell *matCellDef="let element"> {{element.web_pages}} </td>
+                <td mat-cell *matCellDef="let element" style="color: darkblue;"> {{element.web_pages}} </td>
             </ng-container>
 
             <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
